Fixed: TESTNG-296: Malformed jar URLs breaking -testJar